--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a class="image"> <img src="images/Avatar_Sherif.jpg" width="225" height="275" alt="" /></a>
+					<a class="image"> <img src="images/Avatar_Sherif.jpg" width="225" height="290" alt="" /></a>
 					<h1><strong> Hello There!</strong><br>
 					Thank you for visiting my Data Analysis Portfolio.<br />
 					
@@ -35,7 +35,7 @@
 						<p style="text-align: justify;">I am a Professional Data Analyst with over seven years of experience in data analysis, including ETL processes using Python and working with relational databases. Over the years, I have 
 						proven my ability to leverage data to develop impactful insights and models that drive business decisions. I am experienced in working cross-functionally within dynamic teams to innovate and optimize data infrastructure. One of my passions is contributing to data-driven projects and enabling AI solutions that align with business objectives.</p>
 						<ul class="actions">
-							<li><a href="https://drive.google.com/file/d/1vu-7tIe7dtSxan94mnt339BKQzjQsOX1/view?usp=sharing" target="_blank" class="button">Full Resume</a></li>
+							<li><a href="https://drive.google.com/file/d/12INstgPx4k18q2sqfpHWKizw7qau-fLw/view" target="_blank" class="button">Full Resume</a></li>
 						</ul>
 					</section>
 
