--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a class="image"> <img src="images/Avatar_Sherif.jpg" width="225" height="290" alt="" /></a>
+					<a class="image"> <img src="images/Avatar_Sherif.jpg" width="225" height="275" alt="" /></a>
 					<h1><strong> Hello There!</strong><br>
 					Thank you for visiting my Data Analysis Portfolio.<br />
 					
@@ -35,7 +35,7 @@
 						<p style="text-align: justify;">I am a Professional Data Analyst with over seven years of experience in data analysis, including ETL processes using Python and working with relational databases. Over the years, I have 
 						proven my ability to leverage data to develop impactful insights and models that drive business decisions. I am experienced in working cross-functionally within dynamic teams to innovate and optimize data infrastructure. One of my passions is contributing to data-driven projects and enabling AI solutions that align with business objectives.</p>
 						<ul class="actions">
-							<li><a href="https://drive.google.com/file/d/12INstgPx4k18q2sqfpHWKizw7qau-fLw/view" target="_blank" class="button">Full Resume</a></li>
+							<li><a href="https://drive.google.com/file/d/1vu-7tIe7dtSxan94mnt339BKQzjQsOX1/view?usp=sharing" target="_blank" class="button">Full Resume</a></li>
 						</ul>
 					</section>
 
@@ -52,7 +52,13 @@
 						<div class="row">
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://www.kaggle.com/code/sherifabdelhameed94/2-amazon-books-best-sellers-eda-viz-hypoth-t" target="_blank" class="image fit thumb"><img src="images/Amazon Books.jpg" width="300" height="250" alt="" /></a>
+								<a href="https://www.kaggle.com/code/sherifabdelhameed94/wb-portfolio-wdi-afe-eda-ecotricks/notebook" target="_blank" class="image fit thumb"><img src="images/africa2.jpg" width="300" height="250" alt="" /></a>
+								<h2>[In Process] Effects of WB Projects on WDI Poverty Indicators in AFE</h2>
+								<p style="text-align: justify;"> This ambitious project intends to test the hypothesis that WB projects have an effect on poverty alleviation in AFE countries. And if so, which project sector has the most significant impact?</p>
+							</article>
+
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://www.kaggle.com/code/sherifabdelhameed94/amazon-books-best-sellers-eda-viz-hypothesis-t/notebook" target="_blank" class="image fit thumb"><img src="images/Amazon Books.jpg" width="300" height="250" alt="" /></a>
 								<h2>Amazon Books Best-Sellers EDA, Viz and Hypothesis Testing</h2>
 								<p style="text-align: justify;"> This Notebook utlizes Python and different packages for DataFrame work, viz, calculation and statistical analysis to examine the top 50 Best-selling Books over a 10-year period.</p>
 							</article>
