--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
 										<a href="https://drive.google.com/file/d/1rUsIQMNH6SnEVmrL075kMRh8Vhwt7n7_/view?usp=sharing" target="_blank" class="image fit thumb">
 											<img src="images/Hotel.jpg" width="300" height="250" alt="" />
 										</a>
-										<h2 style="font-size: 24px;">International Hotels Data Analysis for Strategic Planning Purposes</h2>
+										<h2 style="font-size: 24px;">
+											<a href="https://drive.google.com/file/d/1rUsIQMNH6SnEVmrL075kMRh8Vhwt7n7_/view?usp=sharing" target="_blank" style="text-decoration: none; color: inherit;">
+											  International Hotels Data Analysis for Strategic Planning Purposes
+											</a>
+										  </h2>
 										<p style="text-align: justify; font-size: 18px;">
 											Tools Used: SSMS, Power BI <br>
 											In this scenario, stakeholders are interested in the status of hotel revenues, potential need for extra parking slots, and other trends in the data. <br>
@@ -80,7 +84,7 @@
 										<a href="https://drive.google.com/file/d/1Sy0MYADXSvtIgWACaK1A3OF4SE_jcONO/view?usp=sharing" target="_blank" class="image fit thumb">
 											<img src="images/customer cluster.jpg" width="300" height="250" alt="" />
 										</a>
-										<h2 style="font-size: 24px;">Customer Clustering and Segmentation for Marketing Purposes</h2>
+										<h2 style="font-size: 24px;"> <a href="https://drive.google.com/file/d/1Sy0MYADXSvtIgWACaK1A3OF4SE_jcONO/view?usp=sharing" target="_blank" style="text-decoration: none; color: inherit;"> Customer Clustering and Segmentation for Marketing Purposes </a></h2>
 										<p style="text-align: justify; font-size: 18px;">
 											Tools Used: Python, Machine Learning <br>
 											In this scenario, the marketing strategy team would like to understand their customer base who are best fit for a campaign. <br>
@@ -89,8 +93,8 @@
 							
 										<br>
 										<div>
-											<a href="#" target="_blank" class="button">Pres in process</a>
-											<a href="https://github.com/SherifAbdelhameedDataArt/Exhibit/blob/main/2%20Customer%20Cluster%20and%20Segmentation.ipynb" target="_blank" class="button">Notebook</a>
+											<a href="https://www.youtube.com/watch?v=zxutM5llFCk" target="_blank" class="button">Watch Presentation</a>
+											<a href="https://github.com/SherifAbdelhameedDataArt/Exhibit/blob/main/2%20Customer%20Cluster%20and%20Segmentation.ipynb" target="_blank" class="button">Code</a>
 										</div>
 									</article>
 								</div>
@@ -100,6 +104,7 @@
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
+						<li><a href= "https://www.youtube.com/@sherifabdelhameed6004/videos" class="icon brands fa-youtube"><span class = "label">YouTube</span></a></li>
 						<li><a href="https://www.linkedin.com/in/sherifabdelhameed/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/SherifAbdelhameedDataArt" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.kaggle.com/sherifabdelhameed94/code" class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
