--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                 <!-- Embedded YouTube Video -->
                 <section id="video">
                     <header class="major">
-                        <h2>Introduction</h2>
+                        <h2>Featured Project Presentation</h2>
                     </header>
                     <iframe width="560" height="315" 
-                            src="https://www.youtube.com/embed/your-video-id" 
+                            src="https://youtu.be/kbdyhdcPi4I" 
                             title="YouTube video player" 
                             frameborder="0" 
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -81,6 +81,7 @@
 						
 									<br>
 									<div>
+										<a href="https://youtu.be/kbdyhdcPi4I" target="_blank" class="button">Watch Presentation</a>
 										<a href="https://github.com/SherifAbdelhameedDataArt/Exhibit/blob/main/3%20Employee%20Wellness%20-%20SSMS.sql" target="_blank" class="button">SSMS Query</a>
 										<a href="https://github.com/SherifAbdelhameedDataArt/Exhibit/raw/refs/heads/main/3%20Employee%20Wellness%20-%20PowerBI.pbix" target="_blank" class="button">Dashboard</a>
 									</div>
