--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
                     <header class="major">
                         <h2>Featured Project Presentation</h2>
                     </header>
-                    <iframe width="560" height="315" 
-                            src="https://youtu.be/kbdyhdcPi4I" 
-                            title="YouTube video player" 
+			<iframe width="560" height="315" 
+                            src="https://www.youtube.com/embed/kbdyhdcPi4I" 
                             frameborder="0" 
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
@@ -81,7 +80,7 @@
 						
 									<br>
 									<div>
-										<a href="https://youtu.be/kbdyhdcPi4I" target="_blank" class="button">Watch Presentation</a>
+										<a href="https://www.youtube.com/watch?v=kbdyhdcPi4I&t=864s" target="_blank" class="button">Watch Presentation</a>
 										<a href="https://github.com/SherifAbdelhameedDataArt/Exhibit/blob/main/3%20Employee%20Wellness%20-%20SSMS.sql" target="_blank" class="button">SSMS Query</a>
 										<a href="https://github.com/SherifAbdelhameedDataArt/Exhibit/raw/refs/heads/main/3%20Employee%20Wellness%20-%20PowerBI.pbix" target="_blank" class="button">Dashboard</a>
 									</div>
