--- a/index.html
+++ b/index.html
@@ -39,8 +39,6 @@
                         </ul>
                     </section>
     </body>
-
-					
 					<hr style="height:2px;border-width:0;color:gray;background-color:gray"> 
 						<h2> <p style="text-align: justify;"> I am constantly adding projects and updating the below content. <br> <strong> Stay Tuned!</strong></h2>
 							<hr style="height:2px;border-width:0;color:gray;background-color:gray"> 
@@ -50,6 +48,33 @@
 								<h2><strong>Portfolio by Industry</strong></h2>
 							</header>
 							
+							<header class="major">
+								<h2><strong>Credit and Finance</strong></h2>
+							</header>
+
+							<div class="row">
+								<article class="col-6 col-12-xsmall work-item">
+									<a href="https://www.kaggle.com/code/sherifabdelhameed94/5-ml-model-to-predict-loan-approvals" target="_blank" class="image fit thumb">
+										<img src="images/loanapprovals.jpg" width="300" height="250" alt="" />
+									</a>
+									<h2 style="font-size: 24px;">
+										<a href="https://www.kaggle.com/code/sherifabdelhameed94/5-ml-model-to-predict-loan-approvals" target="_blank" style="text-decoration: none; color: inherit;"
+										> Predicting Loan Approval via Machine Learning </a>
+									</h2>
+									<p style="text-align: justify; font-size: 18px;">
+										Tools Used: Kaggle, Python, EDA, Machine Learning <br>
+										Scenario: Stakeholders in the banking industry are interested in finding out the different determinants of loan approval. <br>
+										Approach: Import a database of 32.5k loans with 12 features relating to client demographics, loan properties, and credit history. Create a Machine Learning model making predictions based on the identified highest contributing features for loan approvals.
+									</p>
+									<br>
+									<div>
+										<!-- <a href="https://www.youtube.com/watch?v=kbdyhdcPi4I&t=864s" target="_blank" class="button">Watch Presentation</a>
+										<a href="https://github.com/SherifAbdelhameedDataArt/Exhibit/blob/main/3%20Employee%20Wellness%20-%20SSMS.sql" target="_blank" class="button">SSMS Query</a>
+										<a href="https://github.com/SherifAbdelhameedDataArt/Exhibit/raw/refs/heads/main/3%20Employee%20Wellness%20-%20PowerBI.pbix" target="_blank" class="button">Dashboard</a> -->
+									</div>
+								</article>
+							</div>
+
 							<header class="major">
 								<h2><strong>HR and People Analytics</strong></h2>
 							</header>
