--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 
 							<div class="row">
 								<article class="col-6 col-12-xsmall work-item">
-									<a href="https://www.kaggle.com/code/sherifabdelhameed94/5-ml-model-to-predict-loan-approvals" target="_blank" class="image fit thumb">
+									<a href="https://drive.google.com/file/d/1F3dMXSGJ87WTqNEHvB7hpVEQHjkv5rHp/view?usp=sharing" target="_blank" class="image fit thumb">
 										<img src="images/loanapprovals.jpg" width="300" height="250" alt="" />
 									</a>
 									<h2 style="font-size: 24px;">
-										<a href="https://www.kaggle.com/code/sherifabdelhameed94/5-ml-model-to-predict-loan-approvals" target="_blank" style="text-decoration: none; color: inherit;"
+										<a href="https://drive.google.com/file/d/1F3dMXSGJ87WTqNEHvB7hpVEQHjkv5rHp/view?usp=sharing" target="_blank" style="text-decoration: none; color: inherit;"
 										> Predicting Loan Approval via Machine Learning </a>
 									</h2>
 									<p style="text-align: justify; font-size: 18px;">
@@ -68,8 +68,8 @@
 									</p>
 									<br>
 									<div>
+										<a href="https://www.kaggle.com/code/sherifabdelhameed94/5-ml-model-to-predict-loan-approvals" target="_blank" class="button">Python Code</a>
 										<!-- <a href="https://www.youtube.com/watch?v=kbdyhdcPi4I&t=864s" target="_blank" class="button">Watch Presentation</a>
-										<a href="https://github.com/SherifAbdelhameedDataArt/Exhibit/blob/main/3%20Employee%20Wellness%20-%20SSMS.sql" target="_blank" class="button">SSMS Query</a>
 										<a href="https://github.com/SherifAbdelhameedDataArt/Exhibit/raw/refs/heads/main/3%20Employee%20Wellness%20-%20PowerBI.pbix" target="_blank" class="button">Dashboard</a> -->
 									</div>
 								</article>
