--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 									<br>
 									<div>
 										<a href="https://www.kaggle.com/code/sherifabdelhameed94/5-ml-model-to-predict-loan-approvals" target="_blank" class="button">Python Code</a>
-										<!-- <a href="https://www.youtube.com/watch?v=kbdyhdcPi4I&t=864s" target="_blank" class="button">Watch Presentation</a>
-										<a href="https://github.com/SherifAbdelhameedDataArt/Exhibit/raw/refs/heads/main/3%20Employee%20Wellness%20-%20PowerBI.pbix" target="_blank" class="button">Dashboard</a> -->
+										<a href="https://www.youtube.com/watch?v=pYEXsnNkBb0" target="_blank" class="button">Watch Presentation</a>
+										<!-- <a href="https://github.com/SherifAbdelhameedDataArt/Exhibit/raw/refs/heads/main/3%20Employee%20Wellness%20-%20PowerBI.pbix" target="_blank" class="button">Dashboard</a> -->
 									</div>
 								</article>
 							</div>
