--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<header class="major">
 								<h2><strong>Portfolio by Industry</strong></h2>
 							</header>
-							
+
 							<header class="major">
 								<h2><strong>Credit and Finance</strong></h2>
 							</header>
@@ -71,6 +71,34 @@
 										<a href="https://www.kaggle.com/code/sherifabdelhameed94/5-ml-model-to-predict-loan-approvals" target="_blank" class="button">Python Code</a>
 										<a href="https://www.youtube.com/watch?v=pYEXsnNkBb0" target="_blank" class="button">Watch Presentation</a>
 										<!-- <a href="https://github.com/SherifAbdelhameedDataArt/Exhibit/raw/refs/heads/main/3%20Employee%20Wellness%20-%20PowerBI.pbix" target="_blank" class="button">Dashboard</a> -->
+									</div>
+								</article>
+							</div>
+							
+							<header class="major">
+								<h2><strong>Development Economics</strong></h2>
+							</header>
+
+							<div class="row">
+								<article class="col-6 col-12-xsmall work-item">
+									<a href="" target="_blank" class="image fit thumb">
+										<img src="images/Findex.jpg" width="300" height="250" alt="" />
+									</a>
+									<h2 style="font-size: 24px;">
+										<a href="" target="_blank" style="text-decoration: none; color: inherit;"
+										> WB ScoreCard - Financial Inclusion KPIs (Early Access) </a>
+									</h2>
+									<p style="text-align: justify; font-size: 18px;">
+										Tools Used: SSMS, DAX, PowerBI <br>
+										Scenario: The dashboard offers not only efficteveness KPIs but also efficiency by disaggregate (gender), region, country, global practice, FCV flags, lending instrument and particular WB operations.
+										It's a fork-off from the WB ScoreCard applied to the financial inclusion measuring stick. Addressing operational development and developmental impact (especially in scale) remains a challenging aspect of the human sciences.
+										Figuring out new visualization possibilities, new features and KPIs is essential to craft a way forward to a world with no poverty and sustainable living. 
+									</p>
+									<br>
+									<div>
+										<a href="https://drive.google.com/file/d/1F4jEHsBzgd4Uf7e3-ArnXjKNtVAAekWH/view?usp=sharing" target="_blank" class="button">Download Dashboard</a>
+										<!-- <a href="https://www.youtube.com/watch?v=pYEXsnNkBb0" target="_blank" class="button">Watch Presentation</a>
+										 <a href="https://github.com/SherifAbdelhameedDataArt/Exhibit/raw/refs/heads/main/3%20Employee%20Wellness%20-%20PowerBI.pbix" target="_blank" class="button">Dashboard</a> -->
 									</div>
 								</article>
 							</div>
