--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
                             <h2><strong>About Me</strong> <br>
                                 Sherif Tarek Ibraheem Abdelhameed</h2>
                         </header>
-                        <p style="text-align: justify;">I am a Professional Data Analyst with over seven years of experience in public and international organizations, and developmental institutions. Over the years, I have honed my ability to leverage data to develop impactful insights and models that drive business decisions.
-                            <br> The best work enviroments are ones that are challenging but foster growth. The best teams are those with mutual respect and understanding. I am glad to spend my life trying to make a developmental impact for my organization, clients and those who surround me. <br>I am also very passionate about AI and its integration potential in my personal and professional life.</p>
+                        <p style="text-align: justify;">Results-driven economist and data analyst with extensive experience at the World Bank and in the financial sector. Proven expertise in applying advanced economic theory, econometric analysis, and data science to inform strategic decision-making and promote sustainable development in emerging markets. Skilled in developing knowledge products, automating processes, and creating impactful dashboards, driving efficiency and stakeholder engagement. A collaborative leader with a strong technical foundation in Python, SQL, and Power BI, complemented by a Master’s degree in International and Development Economics and certifications in data analytics and financial management. Dedicated to delivering innovative, data-driven solutions that foster financial inclusion and economic growth globally.</p>
                         <ul class="actions">
                             <li><a href="https://drive.google.com/file/d/1ZyrHqWvSTRPhRmnB_hIYd6oMn59W35s6/view?usp=sharing" target="_blank" class="button">Full Resume</a></li>
                         </ul>
@@ -81,7 +80,7 @@
 
 							<div class="row">
 								<article class="col-6 col-12-xsmall work-item">
-									<a href="" target="_blank" class="image fit thumb">
+									<a href="https://drive.google.com/file/d/1F4jEHsBzgd4Uf7e3-ArnXjKNtVAAekWH/view?usp=sharing" target="_blank" class="image fit thumb">
 										<img src="images/Findex.jpg" width="300" height="250" alt="" />
 									</a>
 									<h2 style="font-size: 24px;">
@@ -93,6 +92,26 @@
 										Scenario: The dashboard offers not only efficteveness KPIs but also efficiency by disaggregate (gender), region, country, global practice, FCV flags, lending instrument and particular WB operations.
 										It's a fork-off from the WB ScoreCard applied to the financial inclusion measuring stick. Addressing operational development and developmental impact (especially in scale) remains a challenging aspect of the human sciences.
 										Figuring out new visualization possibilities, new features and KPIs is essential to craft a way forward to a world with no poverty and sustainable living. 
+									</p>
+									<br>
+									<div>
+										<a href="https://drive.google.com/file/d/1F4jEHsBzgd4Uf7e3-ArnXjKNtVAAekWH/view?usp=sharing" target="_blank" class="button">Download Dashboard</a>
+										<!-- <a href="https://www.youtube.com/watch?v=pYEXsnNkBb0" target="_blank" class="button">Watch Presentation</a>
+										 <a href="https://github.com/SherifAbdelhameedDataArt/Exhibit/raw/refs/heads/main/3%20Employee%20Wellness%20-%20PowerBI.pbix" target="_blank" class="button">Dashboard</a> -->
+									</div>
+								</article>
+
+								<article class="col-6 col-12-xsmall work-item">
+									<a href="https://drive.google.com/file/d/1F4jEHsBzgd4Uf7e3-ArnXjKNtVAAekWH/view?usp=sharing" target="_blank" class="image fit thumb">
+										<img src="images/Findex.jpg" width="300" height="250" alt="" />
+									</a>
+									<h2 style="font-size: 24px;">
+										<a href="" target="_blank" style="text-decoration: none; color: inherit;"
+										>Strategic Investment Dashboard: Tech Startups in Africa (AIMM inspired)</a>
+									</h2>
+									<p style="text-align: justify; font-size: 18px;">
+										Tools Used: SSMS, Python, PowerBI <br>
+										Scenario: The designed dashboard offers keen insights to strategic funding decisions into the tech startup industry in Africa. The data gathered from the open access DisruptAfrica institution was fully utilized for inspection via the IFC's AIMM framework. This enables drillthrough of the data to identify shortages of funding, impactful investments in term of employment, number of startups, sustainiability and more.
 									</p>
 									<br>
 									<div>
