--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 								<article class="col-6 col-12-xsmall work-item">
 									<a href="https://drive.google.com/file/d/1F4jEHsBzgd4Uf7e3-ArnXjKNtVAAekWH/view?usp=sharing" target="_blank" class="image fit thumb">
-										<img src="images/Findex.jpg" width="300" height="250" alt="" />
+										<img src="images/Startup.jpeg" width="300" height="250" alt="" />
 									</a>
 									<h2 style="font-size: 24px;">
 										<a href="" target="_blank" style="text-decoration: none; color: inherit;"
@@ -115,9 +115,9 @@
 									</p>
 									<br>
 									<div>
-										<a href="https://drive.google.com/file/d/1F4jEHsBzgd4Uf7e3-ArnXjKNtVAAekWH/view?usp=sharing" target="_blank" class="button">Download Dashboard</a>
-										<!-- <a href="https://www.youtube.com/watch?v=pYEXsnNkBb0" target="_blank" class="button">Watch Presentation</a>
-										 <a href="https://github.com/SherifAbdelhameedDataArt/Exhibit/raw/refs/heads/main/3%20Employee%20Wellness%20-%20PowerBI.pbix" target="_blank" class="button">Dashboard</a> -->
+										<a href="https://drive.google.com/file/d/1wESIq37zEnl4iUeiSzZ6jOAH0Cqxzwz7/view?usp=drive_link" target="_blank" class="button">Dashboard</a>
+										<a href="https://github.com/SherifAbdelhameedDataArt/PythonProject/blob/master/DA_AIMM.ipynb" target="_blank" class="button">Examine PyCode</a>
+										<!-- <a href="https://github.com/SherifAbdelhameedDataArt/Exhibit/raw/refs/heads/main/3%20Employee%20Wellness%20-%20PowerBI.pbix" target="_blank" class="button">Dashboard</a> -->
 									</div>
 								</article>
 							</div>
